--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -44,9 +44,8 @@
     </div>
   </section>
 
-  <p>More Barbie The Movie Dolls</p>
-
   <section class="section5">
+    <p>More Barbie The Movie Dolls</p>
     <div class="grid1">
       <div class="content4">
         <img src="../img/grid_img1.jpg.svg" alt="" />
@@ -128,9 +127,10 @@
 
   <section class="section9">
     <img src="../img/section9_banner.svg" alt="" />
-    <div class="content1">
-      <a href="#"><button class="section9_button">Explore</button></a>
-    </div>
+
+    <a href="#" style="position: absolute; bottom: 100px; right: 100px">
+      <button class="section9_button">Explore</button></a
+    >
   </section>
 
   <section class="section10">
@@ -141,22 +141,26 @@
       <a href="#"><button class="section9_button">Shop Now</button></a>
     </div>
   </section>
-  Barbie Signature Membership and More
+
   <section class="section11">
+    <p>Barbie Signature Membership and More</p>
 
-    <img src="../img/section11_img1.svg" alt="" />
-    <div class="content1">
-      <span class="section11_text1">BECOME A MEMBER</span>
-      <a href="#"><button class="section9_button">Explore Benefits</button></a>
+    <div class="section11_content">
+      <div
+        class="content11"
+        style="background: url('../img/section11_img1.svg')"
+      >
+        <span class="section11_text1">BECOME A MEMBER</span>
+        <a href="#"
+          ><button class="section9_button">Explore Benefits</button></a
+        >
+      </div>
+
+      <div class="content11">
+        <img src="../img/section11_img2.svg" alt="" />
+        <span class="section11_text1">JOIN THE CONVERSATION</span>
+        <a href="#"><button class="section9_button">Chat Now</button></a>
+      </div>
     </div>
-
- 
-    <img src="../img/section11_img2.svg" alt="" />
-    <div class="content1">
-      
-      <span class="section11_text1">JOIN THE CONVERSATION</span>
-      <a href="#"><button class="section9_button">Chat Now</button></a>
-  
-  </div>
   </section>
 </main>
