--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Barbies</title>
 
-    <link rel="stylesheet" href="css/style.min.css">
-</head>
+    <link rel="stylesheet" href="css/style.min.css" />
+  </head>
 
-<style>
-    body{
-        scroll-behavior: smooth;
+  <style>
+    body {
+      scroll-behavior: smooth;
     }
-</style>
+  </style>
 
-<body>
-
-    @@include("components/_header.html")
-    @@include("pages/main.html")
+  <body>
+    @@include("components/_header.html") @@include("pages/main.html")
     @@include("components/_footer.html")
-</body>
-
+  </body>
 </html>
