--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -143,24 +143,32 @@
   </section>
 
   <section class="section11">
-    <p>Barbie Signature Membership and More</p>
+    Barbie Signature Membership and More
 
-    <div class="section11_content">
-      <div
-        class="content11"
-        style="background: url('../img/section11_img1.svg')"
-      >
-        <span class="section11_text1">BECOME A MEMBER</span>
-        <a href="#"
-          ><button class="section9_button">Explore Benefits</button></a
-        >
+    <div class="content11_container">
+      <div class="content11">
+        <img src="../img/section11_img1.svg" alt="" />
+
+        <div class="content11-info">
+          <span class="section11_text1">BECOME A MEMBER</span>
+          <a href="#"
+            ><button class="section9_button">Explore Benefits</button></a
+          >
+        </div>
       </div>
 
       <div class="content11">
         <img src="../img/section11_img2.svg" alt="" />
-        <span class="section11_text1">JOIN THE CONVERSATION</span>
-        <a href="#"><button class="section9_button">Chat Now</button></a>
+
+        <div class="content11-info">
+          <span class="section11_text1">JOIN THE CONVERSATION</span>
+          <a href="#"><button class="section9_button">Chat Now</button></a>
+        </div>
       </div>
     </div>
   </section>
+  <div class="main-end">
+  <p>©2023 Mattel. © Warner Bros. Entertainment Inc. All rights reserved.</p>
+  <p>All content previously recorded prior to July 14, 2023</p>
+</div>
 </main>
